--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,3 +36,7 @@ jobs:
 
       - name: Run tests
         run: make test
+
+
+      - name: Hello from Hexlet!
+        run: actions/hexlet-components/hello-from-hexlet-action@release
